--- a/Sandbox/sandbox.ipynb
+++ b/Sandbox/sandbox.ipynb
@@ -2,79 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "87db1f95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('reviews.txt', encoding='utf-8') as file:\n",
-    "    raw_reviews = file.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "ed559290",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('labels.txt', encoding='utf-8') as file:\n",
-    "    raw_labels = file.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "a4a7bda6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokens = list(map(str.split, raw_reviews)) # статьи"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "163afbdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab = list({word for token in tokens for word in token if len(word) > 0}) # словарь всех слов"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "2b9dfe3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word2index = {word: idx for idx, word in enumerate(vocab)} #  словарь индексов слов"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "87aaed77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_dataset = [[word2index[word] for word in token] for token in tokens]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "b7be4783",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "with open('reviews.txt', encoding='utf-8') as file:\n",
+    "    raw_reviews = file.readlines()\n",
+    "\n",
+    "with open('labels.txt', encoding='utf-8') as file:\n",
+    "    raw_labels = file.readlines()\n",
+    "\n",
+    "tokens = list(map(str.split, raw_reviews)) # статьи\n",
+    "\n",
+    "vocab = list({word for token in tokens for word in token if len(word) > 0}) # словарь всех слов\n",
+    "\n",
+    "word2index = {word: idx for idx, word in enumerate(vocab)} #  словарь индексов слов\n",
+    "\n",
+    "input_dataset = [[word2index[word] for word in token] for token in tokens]\n",
+    "\n",
     "target_dataset = [1 if label == 'positive\\n' else 0 for label in raw_labels]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "id": "776f57e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e04271",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "197922df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "f = open('reviews.txt')\n",
+    "raw_reviews = f.readlines()\n",
+    "f.close()\n",
+    "\n",
+    "f = open('labels.txt')\n",
+    "raw_labels = f.readlines()\n",
+    "f.close()\n",
+    "\n",
+    "tokens = list(map(lambda x:set(x.split(\" \")),raw_reviews))\n",
+    "\n",
+    "vocab = set()\n",
+    "for sent in tokens:\n",
+    "    for word in sent:\n",
+    "        if(len(word)>0):\n",
+    "            vocab.add(word)\n",
+    "vocab = list(vocab)\n",
+    "\n",
+    "word2index = {}\n",
+    "for i,word in enumerate(vocab):\n",
+    "    word2index[word]=i\n",
+    "\n",
+    "input_dataset = list()\n",
+    "for sent in tokens:\n",
+    "    sent_indices = list()\n",
+    "    for word in sent:\n",
+    "        try:\n",
+    "            sent_indices.append(word2index[word])\n",
+    "        except:\n",
+    "            \"\"\n",
+    "    input_dataset.append(list(set(sent_indices)))\n",
+    "\n",
+    "target_dataset = list()\n",
+    "for label in raw_labels:\n",
+    "    if label == 'positive\\n':\n",
+    "        target_dataset.append(1)\n",
+    "    else:\n",
+    "        target_dataset.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "e9327459",
    "metadata": {},
    "outputs": [
@@ -82,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter:0 Progress:95.99% Training Accuracy:0.8183333333333334%%\n",
-      "Iter:1 Progress:95.99% Training Accuracy:0.8487291666666666%\n",
+      "Iter:0 Progress:95.99% Training Accuracy:0.8167083333333334%%\n",
+      "Iter:1 Progress:95.99% Training Accuracy:0.848875%844134194%\n",
       "Test Accuracy:0.853\n"
      ]
     }
@@ -146,32 +162,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ddafc85b",
+   "execution_count": 15,
+   "id": "a090237c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1a1c160e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def similar(target='beautiful'):\n",
+    "    target_index = word2index[target]\n",
+    "    scores = Counter()\n",
+    "    for word, index in word2index.items():\n",
+    "        raw_difference = weights_0_1[index] - weights_0_1[target_index]\n",
+    "        squared_difference = raw_difference * raw_difference\n",
+    "        scores[word] = -math.sqrt(sum(squared_difference))\n",
+    "    return scores.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bba98d36",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.05795379072681704"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('terrible', -0.0)\n",
+      "('bad', -0.7567453447563925)\n",
+      "('boring', -0.7705484845640788)\n",
+      "('annoying', -0.7706132268820604)\n",
+      "('worse', -0.778006839658008)\n",
+      "('poorly', -0.8065478081186819)\n",
+      "('unfortunately', -0.8180935263405549)\n",
+      "('poor', -0.9302168839766167)\n",
+      "('nothing', -0.9781280342792692)\n",
+      "('dull', -1.0185300244582354)\n"
+     ]
     }
    ],
    "source": [
-    "883*2095*1200*2/(2400*2400*13300)"
+    "print(*similar('terrible'), sep='\\n')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a090237c",
+   "id": "b10eccfc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "244"
+   ]
   }
  ],
  "metadata": {
