--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1310,44 +1310,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "ad4b4c6a",
+   "execution_count": 7,
+   "id": "741c1ee7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cargo_space_density_percent</th>\n",
+       "      <th>cargo_space_filling_space_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>75011.000000</td>\n",
+       "      <td>75011.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>78.380579</td>\n",
+       "      <td>59.749387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>18.396202</td>\n",
+       "      <td>25.021321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>11.975050</td>\n",
+       "      <td>0.002480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>64.235430</td>\n",
+       "      <td>41.364210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>81.416470</td>\n",
+       "      <td>58.730290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>94.562650</td>\n",
+       "      <td>83.072920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>98.437500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.00248"
+       "       cargo_space_density_percent  cargo_space_filling_space_percent\n",
+       "count                 75011.000000                       75011.000000\n",
+       "mean                     78.380579                          59.749387\n",
+       "std                      18.396202                          25.021321\n",
+       "min                      11.975050                           0.002480\n",
+       "25%                      64.235430                          41.364210\n",
+       "50%                      81.416470                          58.730290\n",
+       "75%                      94.562650                          83.072920\n",
+       "max                     100.000000                          98.437500"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.cargo_space_filling_space_percent.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "63b972f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "98.4375"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.cargo_space_filling_space_percent.max()"
+    "df[['cargo_space_density_percent', 'cargo_space_filling_space_percent']].describe()"
    ]
   },
   {
