--- a/Sandbox/Untitled.ipynb
+++ b/Sandbox/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "0ab7d340",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "import pickle\n",
     "import seaborn as sns\n",
     "import torch\n",
+    "from torch import nn, optim\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split, KFold\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
@@ -25,241 +26,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "434b2f5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda')\n",
-    "else:\n",
-    "    device = torch.device('cpu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8ba4bc47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Класс - модуль, реализующий архитектуру. Можно было бы использовать nn.Sequential\n",
-    "class NeuralNetModel(torch.nn.Module):\n",
-    "    def __init__(self, input_dim, hidden_dim, output_dim):\n",
-    "        super(NeuralNetModel, self).__init__()\n",
-    "\n",
-    "        # Первый полносвязный слой\n",
-    "        self.fc1 = torch.nn.Linear(input_dim, hidden_dim, device=device) \n",
-    "\n",
-    "        # Нелинейная функция\n",
-    "        self.activation = torch.nn.ReLU()\n",
-    "        \n",
-    "        # Полносвязный слой\n",
-    "        self.fc2 = torch.nn.Linear(hidden_dim, output_dim, device=device)  \n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        # Полносвязный слой\n",
-    "        out = self.fc1(x)\n",
-    "\n",
-    "        # Нелинейная функция\n",
-    "        out = self.activation(out)\n",
-    "\n",
-    "        # Полносвязный слой\n",
-    "        out = self.fc2(out)\n",
-    "        \n",
-    "        return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fa08879e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = NeuralNetModel(5, 10, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "14cdb3e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weight = torch.tensor([[1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5],\n",
-    "                      [1, 2, 3, 4, 5]])\n",
-    "weight = weight.type(torch.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "6e1c2d28",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([10, 5])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weight.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "355dd743",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.],\n",
-       "        [1., 2., 3., 4., 5.]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "3c91b2e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Parameter containing:\n",
-       "tensor([[ 0.4156,  0.4188,  0.4409, -0.2223, -0.0092],\n",
-       "        [ 0.4357, -0.2379, -0.3851,  0.0518, -0.1201],\n",
-       "        [ 0.0167,  0.2359, -0.2200, -0.0249,  0.2474],\n",
-       "        [-0.1188, -0.3928, -0.0895,  0.2007, -0.3319],\n",
-       "        [-0.2384,  0.4274, -0.3406,  0.2797,  0.0418],\n",
-       "        [ 0.1163,  0.2719,  0.4238, -0.0488,  0.1991],\n",
-       "        [ 0.3628,  0.3552, -0.2150,  0.3740,  0.3271],\n",
-       "        [ 0.2066,  0.2653,  0.0891,  0.2110,  0.1955],\n",
-       "        [ 0.2879, -0.2189,  0.3884, -0.2384, -0.2715],\n",
-       "        [ 0.1236, -0.1306, -0.0804, -0.3025,  0.1951]], device='cuda:0',\n",
-       "       requires_grad=True)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fc1.weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "f1f926a1",
+   "execution_count": 7,
+   "id": "8662bd4c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NeuralNetModel(\n",
-      "  (fc1): Linear(in_features=5, out_features=10, bias=True)\n",
-      "  (activation): ReLU()\n",
-      "  (fc2): Linear(in_features=10, out_features=1, bias=True)\n",
-      ")\n"
+      "Model's state_dict:\n",
+      "conv1.weight \t torch.Size([6, 3, 5, 5])\n",
+      "conv1.bias \t torch.Size([6])\n",
+      "conv2.weight \t torch.Size([16, 6, 5, 5])\n",
+      "conv2.bias \t torch.Size([16])\n",
+      "fc1.weight \t torch.Size([120, 400])\n",
+      "fc1.bias \t torch.Size([120])\n",
+      "fc2.weight \t torch.Size([84, 120])\n",
+      "fc2.bias \t torch.Size([84])\n",
+      "fc3.weight \t torch.Size([10, 84])\n",
+      "fc3.bias \t torch.Size([10])\n",
+      "Optimizer's state_dict:\n",
+      "state \t {}\n",
+      "param_groups \t [{'lr': 0.001, 'momentum': 0.9, 'dampening': 0, 'weight_decay': 0, 'nesterov': False, 'maximize': False, 'foreach': None, 'differentiable': False, 'params': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]}]\n"
      ]
     }
    ],
    "source": [
-    "print(model)"
+    "# Define model\n",
+    "class TheModelClass(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(TheModelClass, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 16 * 5 * 5)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "# Initialize model\n",
+    "model = TheModelClass()\n",
+    "\n",
+    "# Initialize optimizer\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
+    "\n",
+    "# Print model's state_dict\n",
+    "print(\"Model's state_dict:\")\n",
+    "for param_tensor in model.state_dict():\n",
+    "    print(param_tensor, \"\\t\", model.state_dict()[param_tensor].size())\n",
+    "\n",
+    "# Print optimizer's state_dict\n",
+    "print(\"Optimizer's state_dict:\")\n",
+    "for var_name in optimizer.state_dict():\n",
+    "    print(var_name, \"\\t\", optimizer.state_dict()[var_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "09e5f18a",
+   "execution_count": 16,
+   "id": "163d6bff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Module.named_parameters of NeuralNetModel(\n",
-       "  (fc1): Linear(in_features=5, out_features=10, bias=True)\n",
-       "  (activation): ReLU()\n",
-       "  (fc2): Linear(in_features=10, out_features=1, bias=True)\n",
-       ")>"
+       "tensor([-0.0574,  0.0096, -0.0198,  0.0324, -0.0187,  0.0285])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.named_parameters"
+    "model.state_dict()['conv1.bias']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03cfe661",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0351c14",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f8822b04",
+   "execution_count": 17,
+   "id": "02ebce96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('../df.json')"
+    "input_dict = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "22a61541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dict[1] = (10, 18)\n",
+    "input_dict[2] = (17, 15)\n",
+    "input_dict[3] = (25, 21)\n",
+    "input_dict[4] = (0, 21)\n",
+    "input_dict[5] = (1, 16)\n",
+    "input_dict[6] = (25, 29)\n",
+    "input_dict[7] = (24, 24)\n",
+    "input_dict[8] = (8, 26)\n",
+    "input_dict[9] = (10, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "afaacf4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: (10, 18),\n",
+       " 2: (17, 15),\n",
+       " 3: (25, 21),\n",
+       " 4: (0, 21),\n",
+       " 5: (1, 16),\n",
+       " 6: (25, 29),\n",
+       " 7: (24, 24),\n",
+       " 8: (8, 26),\n",
+       " 9: (10, 20)}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3611891d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (10, 18)\n",
+      "2 (17, 15)\n",
+      "3 (25, 21)\n",
+      "4 (0, 21)\n",
+      "5 (1, 16)\n",
+      "6 (25, 29)\n",
+      "7 (24, 24)\n",
+      "8 (8, 26)\n",
+      "9 (10, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in input_dict.items():\n",
+    "    print(key, value)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8662bd4c",
+   "id": "9476dfcb",
    "metadata": {},
    "outputs": [],
    "source": []
