--- a/Sandbox/sandbox.ipynb
+++ b/Sandbox/sandbox.ipynb
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2e454629",
    "metadata": {},
    "outputs": [],
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "db89cf15",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "b424bd1c",
    "metadata": {},
    "outputs": [],
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "8f58bbbe",
    "metadata": {},
    "outputs": [],
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "82be9f5c",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "154f60ab",
    "metadata": {
     "scrolled": true
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "c82fb0a4",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "bfe139d8",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "3c6005aa",
    "metadata": {},
    "outputs": [],
@@ -1392,29 +1392,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "40cee60a",
+   "execution_count": 13,
+   "id": "fe4a4d3f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "layer_2_target"
+    "def similar(target='beautiful'):\n",
+    "    target_index = word2index[target]\n",
+    "    \n",
+    "    scores = Counter()\n",
+    "    for word, index in word2index.items():\n",
+    "        raw_difference = weights_0_1[index] - weights_0_1[target_index]\n",
+    "        squared_difference = raw_difference * raw_difference\n",
+    "        scores[word] = -math.sqrt(sum(squared_difference))\n",
+    "    return scores.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a8e23e32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe4a4d3f",
+   "id": "b98450e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rev_i, review in enumerate(input_dataset * iterations):\n",
+    "    for target_i in range(len(review)):\n",
+    "        target_samples = [review[target_i]] + list(concatenated)\\\n",
+    "        [(np.random.rand(negative) * len(concatenated)).astype('int').tolist()]\n",
+    "        \n",
+    "        left_context = review[max(0, target_i - window): target_i]\n",
+    "        right_context = review[target_i + 1, min(len(review): target_i + window)]\n",
+    "        \n",
+    "        layer_1 = np.mean(weights_0_1[left_context + right_context], axis=0)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75001825",
    "metadata": {},
    "outputs": [],
    "source": [
