--- a/PyTorch/Makmahan_Znakomstvo-s-PyTorch.565774.pdf/Untitled.ipynb
+++ b/PyTorch/Makmahan_Znakomstvo-s-PyTorch.565774.pdf/Untitled.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "b8d1b47a",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "fdb5abc3",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "['an', 'arrow', 'banana', 'flies', 'fruit', 'like', 'time']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "46d806c0",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "       [0, 0, 1, 1, 1, 1, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "435e4015",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "58b21d8b",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "61df8caa",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "['an', 'arrow', 'banana', 'flies', 'fruit', 'like', 'time']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "4c0d003c",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "        0.40993715, 0.        ]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,9 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "b84820f8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -182,7 +184,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "2025a05c",
    "metadata": {},
    "outputs": [],
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "102adef6",
    "metadata": {},
    "outputs": [],
@@ -438,6 +440,211 @@
    ],
    "source": [
     "a.squeeze_(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "852481e0",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e4f091be",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# !python -m  spacy download en_core_web_sm --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b72cbf27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[x] No compatible package found for 'ru' (spaCy v3.3.2)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m  spacy download ru --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "af13bd49",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mary', ',', 'do', \"n't\", 'slap', 'the', 'green', 'witch']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "text = \"Mary, don't slap the green witch\"\n",
+    "print([str(token) for token in nlp(text.lower())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "814b7676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['snow', 'white', 'and', 'the', 'seven', 'degrees', '#makeamoviecold', '@midnight', ':-)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.tokenize import TweetTokenizer\n",
+    "tweet = \"Snow White and the Seven Degrees #MakeAMovieCold@midnight:-)\"\n",
+    "tokenizer = TweetTokenizer()\n",
+    "print(tokenizer.tokenize(tweet.lower()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "77cb394a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['mary', ',', \"n't\"], [',', \"n't\", 'slap'], [\"n't\", 'slap', 'green'], ['slap', 'green', 'witch'], ['green', 'witch', '.']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def n_grams(text, n):\n",
+    "    return [text[i: i + n] for i in range(len(text) - n + 1)]\n",
+    "\n",
+    "cleaned = ['mary', ',', \"n't\", 'slap', 'green', 'witch', '.']\n",
+    "print(n_grams(cleaned, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5d03c3eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "he --> he\n",
+      "was --> be\n",
+      "running --> run\n",
+      "late --> late\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "doc = nlp('he was running late')\n",
+    "for token in doc:\n",
+    "    print(f'{token} --> {token.lemma_}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "999ec3fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary - PROPN\n",
+      "slapped - VERB\n",
+      "the - DET\n",
+      "green - PROPN\n",
+      "witch - NOUN\n",
+      ". - PUNCT\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "doc = nlp('Mary slapped the green witch.')\n",
+    "for token in doc:\n",
+    "    print(f'{token} - {token.pos_}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "10eb72c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary - NP\n",
+      "the green witch - NP\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "doc = nlp('Mary slapped the green witch.')\n",
+    "for chunk in doc.noun_chunks:\n",
+    "    print(f'{chunk} - {chunk.label_}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "419206fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "54"
    ]
   }
  ],
